--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "scironbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
+    "build": "tsc && resolve-tspaths",
+    "start": "node .",
     "dev": "ts-node -r tsconfig-paths/register -r dotenv/config ./src/server.ts"
   },
   "keywords": [],
@@ -26,8 +28,10 @@
     "@types/tmi.js": "^1.8.3",
     "dotenv": "^16.0.3",
     "prisma": "^4.14.0",
+    "resolve-tspaths": "^0.8.13",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.6",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   }
